--- a/templates/posts/group_list.html
+++ b/templates/posts/group_list.html
@@ -1,4 +1,20 @@
 {% extends 'base.html' %}
+{% block title %}{{ group.title }}{% endblock %}
 {% block content %}
-  {{ text }}
+  <h1>{{ group.title }}</h1>
+  <p>{{ group.description }}</p>
+  {% for post in posts %}
+    <article>
+      <ul>
+        <li>
+          Автор: {{ post.author }}
+        </li>
+        <li>
+          Дата публикации: {{ post.pub_date|date:"d E Y" }}
+        </li>
+      </ul>
+      <p>{{ post.text }}</p>
+    </article>
+    <hr>
+   {% endfor %}
 {% endblock %}
