--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -1,3 +1,19 @@
 {% extends 'base.html' %}
+{% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
+  {% for post in posts %}
+    <article>
+     <ul>
+       <li>
+         Автор: {{ post.author }}
+       </li>
+       <li>
+         Дата публикации: {{ post.pub_date|date:"d E Y" }}
+       </li>
+     </ul>
+     <p>{{ post.text }}</p>
+    </article>
+    <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+    {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %}
 {% endblock %}
